--- a/settings.gradle
+++ b/settings.gradle
@@ -13,6 +13,7 @@ def domains = [
 def libs = [
     "lib_database",
     "lib_database_test",
+    "lib_preference",
     "lib_presentation",
     "lib_presentation_test",
     "lib_remote",
