--- a/features/feature_exchange_rates/build.gradle
+++ b/features/feature_exchange_rates/build.gradle
@@ -19,7 +19,10 @@ def libs = [
 ]
 
 def testLibs = [
+    "lib_preference_test",
+    "lib_database",
     "lib_database_test",
+    "lib_remote",
     "lib_remote_test"
 ]
 
