--- a/libs/lib_threading/build.gradle
+++ b/libs/lib_threading/build.gradle
@@ -10,8 +10,8 @@ plugins.forEach { plugin ->
 }
 
 def deps = [
-    "dagger",
-    "hilt"
+    "coroutines",
+    "dagger"
 ]
 
 deps.forEach { dep ->
