--- a/deps/version.gradle
+++ b/deps/version.gradle
@@ -14,24 +14,23 @@ ext {
         appcompat           : "1.1.0",
         constraintlayout    : "2.1.0-alpha2",
         datastore           : "1.0.0-alpha08",
-        espresso            : "3.3.0",
+        espresso            : "3.1.0",
         fragment            : "1.3.2",
         hilt                : "1.0.0-alpha03",
+        instrumentation     : "1.1.0",
         lifecycle           : "2.4.0-alpha01",
         navigation          : "2.3.0",
         recyclerview        : "1.2.0-beta01",
         room                : "2.2.5",
         swiperefreshlayout  : "1.2.0-alpha01",
-        test                : "1.1.0",
 
-        // flipper
+        // facebook
         flipper             : "0.83.0",
         soloader            : "0.10.1",
 
         // google
         dagger              : "2.31-alpha",
         material            : "1.2.1",
-        truth               : "1.1.2",
 
         // kotlin
         coroutines          : "1.4.2",
