--- a/settings.gradle
+++ b/settings.gradle
@@ -14,11 +14,13 @@ def libs = [
     "lib_database",
     "lib_database_test",
     "lib_preference",
+    "lib_preference_test",
     "lib_presentation",
     "lib_presentation_test",
     "lib_remote",
     "lib_remote_test",
-    "lib_threading"
+    "lib_threading",
+    "lib_threading_test"
 ]
 
 features.forEach { feature ->
