--- a/app/src/release/AndroidManifest.xml
+++ b/app/src/release/AndroidManifest.xml
@@ -4,7 +4,7 @@
     package="com.bael.interview">
 
     <application
-        android:name=".DadsReleaseApplication"
+        android:name=".CurrencyConverterReleaseApplication"
         tools:replace="android:name" />
 
 </manifest>
